--- a/index.html
+++ b/index.html
@@ -1,20 +1,105 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body>
   <div class="page">
     <header class="header">
-
+      <div class="logo logo_place_header">
+        <img src="./images/logo_place_header.svg" alt="Логотип" class="header__logo_img">
+      </div>
+      <div class="header__title">
+        <p>Научиться учиться</p>
+      </div>
+      <div class="header__subtitle">
+        <p>Какие современные и эффективные подходы <br>к обучению вы можете использовать в своей<br>жизни? <a href="#"
+            class="header__link">Узнать →</a>
+        </p>
+      </div>
+      <div class="header__main-illustration">
+        <img src="./images/header-image.png" alt="Мальчик с собакой" class="header__image">
+      </div>
+      <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
+        <div class="description__two_columns">
+          <div class="description__two_columns_brief">
+            <h1 class="description__two_columns_brief">Главные проблемы в обучении</h1>
+          </div>
+
+          <div class="description__two_columns_main-text">
+            <div class="description__two_columns_paragrath">
+              <p>Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и
+                учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не
+                дает нам реального знания. Зубрежка быстро выветривается т не приносит пользы.</p>
+            </div>
+            <div class="description__two_columns_paragrath two_columns_paragrath_between">
+              <p><span class="two-columns__span-accent">Вывод: </span>
+                учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            </div>
+            <div class="description__two_columns_paragrath">
+              <p>Конкретные техники упражнения помогают изменить подход к обучению, сделать его эффективным и
+                захватывающим. Эти техники применяются на примере обучения в Практикуме.</p>
+            </div>
+          </div>
+        </div>
       </section>
 
       <section class="digits">
+        <h1 class="digits__section-title">Цифры и факты</h1>
+        <h3 class="digits__section-subtitle">Про учебу и мозг</h3>
+
+        <div class="digits__table">
+          <div class="digits__table_cell">
+            <h2 class="digits__table_heading">86 миллиардов</h2>
+            <p class='digits__table_text'>Число нейронов в мозге человека</p>
+          </div>
+
+          <div class="digits__table_cell">
+            <h2 class="digits__table_heading">2.1 миллиарда</h2>
+            <p class="digits__table_text padding-bottom_20px">Число нуждающихся в повышении квалификации</p>
+            <p class="digits__table_text">Всемирный Банк, 2017</p>
+          </div>
+
+          <div class="digits__table_cell">
+            <h2 class="digits__table_heading">1000 терабайт</h2>
+            <p class="digits__table_text">Объем памяти человека</p>
+          </div>
+
+          <div class="digits__table_cell">
+            <h2 class="digits__table_heading">500 триллионов</h2>
+            <p class="digits__table_text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </div>
+
+          <div class="digits__table_cell">
+            <h2 class="digits__table_heading">420 миллионов</h2>
+            <p class="digits__table_text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
+            </p>
+            <p class="digits__table_text padding-bottom_20px">Всемирный Банк, 2017</p>
+          </div>
+
+          <div class="digits__table_cell">
+            <h2 class="digits__table_heading">17-20 лет</h2>
+            <p class="digits__table_text">Пик обучаемости</p>
+          </div>
+
+          <div class="digits__table_cell">
+            <h2 class="digits__table_heading">1885 год</h2>
+            <p class="digits__table_text">Открытие кривой забывания</p>
+          </div>
+
+          <div class="digits__table_cell">
+            <h2 class="digits__table_heading">1889 год</h2>
+            <p class="digits__table_text">Открытие условного рефлекса</p>
+          </div>
       </section>
 
       <section class="feynman">
@@ -28,4 +113,5 @@
     </footer>
   </div>
 </body>
+
 </html>
