--- a/index.html
+++ b/index.html
@@ -12,104 +12,165 @@
 <body>
   <div class="page">
     <header class="header">
-      <div class="logo logo_place_header">
-        <img src="./images/logo_place_header.svg" alt="Логотип" class="header__logo_img">
-      </div>
-      <div class="header__title">
-        <p>Научиться учиться</p>
-      </div>
-      <div class="header__subtitle">
-        <p>Какие современные и эффективные подходы <br>к обучению вы можете использовать в своей<br>жизни? <a href="#"
-            class="header__link">Узнать →</a>
-        </p>
-      </div>
-      <div class="header__main-illustration">
-        <img src="./images/header-image.png" alt="Мальчик с собакой" class="header__image">
-      </div>
+      <img src="./images/logo_place_header.svg" alt="Логотип" class="logo logo__place_header">
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в
+        своей жизни? <a href="#" class="header__link">Узнать →</a></p>
+      <img src="./images/header-image.png" alt="Мальчик с собакой" class="header__main-illustration header__image">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
-        <div class="description__two_columns">
-          <div class="description__two_columns_brief">
-            <h1 class="description__two_columns_brief">Главные проблемы в обучении</h1>
+        <div class="two_columns">
+          <h3 class="two_columns_brief">Главные проблемы в обучении</h3>
+
+          <div class="two_columns_main-text">
+            <p class="two_columns_paragrath">Ни в школе, ни в институте нас не учат тому, как правильно изучать
+              материал. Мы готовимся к экзаменам и
+              учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не
+              дает нам реального знания. Зубрежка быстро выветривается т не приносит пользы.</p>
+
+            <p class="two_columns_paragrath"><span class="two-columns__span-accent">Вывод:
+              </span>
+              учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+
+            <p class="two_columns_paragrath">Конкретные техники упражнения помогают изменить подход к обучению, сделать
+              его эффективным и
+              захватывающим. Эти техники применяются на примере обучения в Практикуме.</p>
+
+          </div>
+        </div>
+      </section>
+      <section class="digits">
+        <h3 class="section-title">Цифры и факты</h3>
+        <h5 class="section-subtitle">Про учебу и мозг</h5>
+
+        <div class="table">
+          <div class="table_cell">
+            <h6 class="table_heading">86 миллиардов</h6>
+            <p class='table_text'>Число нейронов в мозге человека</p>
           </div>
 
-          <div class="description__two_columns_main-text">
-            <div class="description__two_columns_paragrath">
-              <p>Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и
-                учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не
-                дает нам реального знания. Зубрежка быстро выветривается т не приносит пользы.</p>
-            </div>
-            <div class="description__two_columns_paragrath two_columns_paragrath_between">
-              <p><span class="two-columns__span-accent">Вывод: </span>
-                учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-            </div>
-            <div class="description__two_columns_paragrath">
-              <p>Конкретные техники упражнения помогают изменить подход к обучению, сделать его эффективным и
-                захватывающим. Эти техники применяются на примере обучения в Практикуме.</p>
-            </div>
+          <div class="table_cell">
+            <h6 class="table_heading">2.1 миллиарда</h6>
+            <p class="table_text">Число нуждающихся в повышении квалификации</p>
+            <p class="table_text">Всемирный Банк, 2017</p>
+          </div>
+
+          <div class="table_cell">
+            <h6 class="table_heading">1000 терабайт</h6>
+            <p class="table_text">Объем памяти человека</p>
+          </div>
+
+          <div class="table_cell">
+            <h6 class="table_heading">500 триллионов</h6>
+            <p class="table_text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </div>
+
+          <div class="table_cell">
+            <h6 class="table_heading">420 миллионов</h6>
+            <p class="table_text">Число взрослых людей моложе 25 лет, не имеющих образования для
+              трудоустройства
+            </p>
+            <p class="table_text">Всемирный Банк, 2017</p>
+          </div>
+
+          <div class="table_cell">
+            <h6 class="table_heading">17-20 лет</h6>
+            <p class="table_text">Пик обучаемости</p>
+          </div>
+
+          <div class="table_cell">
+            <h6 class="table_heading">1885 год</h6>
+            <p class="table_text">Открытие кривой забывания</p>
+          </div>
+
+          <div class="table_cell">
+            <h6 class="table_heading">1889 год</h6>
+            <p class="table_text">Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
 
-      <section class="digits">
-        <h1 class="digits__section-title">Цифры и факты</h1>
-        <h3 class="digits__section-subtitle">Про учебу и мозг</h3>
-
-        <div class="digits__table">
-          <div class="digits__table_cell">
-            <h2 class="digits__table_heading">86 миллиардов</h2>
-            <p class='digits__table_text'>Число нейронов в мозге человека</p>
-          </div>
-
-          <div class="digits__table_cell">
-            <h2 class="digits__table_heading">2.1 миллиарда</h2>
-            <p class="digits__table_text padding-bottom_20px">Число нуждающихся в повышении квалификации</p>
-            <p class="digits__table_text">Всемирный Банк, 2017</p>
-          </div>
-
-          <div class="digits__table_cell">
-            <h2 class="digits__table_heading">1000 терабайт</h2>
-            <p class="digits__table_text">Объем памяти человека</p>
-          </div>
-
-          <div class="digits__table_cell">
-            <h2 class="digits__table_heading">500 триллионов</h2>
-            <p class="digits__table_text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
-          </div>
-
-          <div class="digits__table_cell">
-            <h2 class="digits__table_heading">420 миллионов</h2>
-            <p class="digits__table_text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
-            </p>
-            <p class="digits__table_text padding-bottom_20px">Всемирный Банк, 2017</p>
-          </div>
-
-          <div class="digits__table_cell">
-            <h2 class="digits__table_heading">17-20 лет</h2>
-            <p class="digits__table_text">Пик обучаемости</p>
-          </div>
-
-          <div class="digits__table_cell">
-            <h2 class="digits__table_heading">1885 год</h2>
-            <p class="digits__table_text">Открытие кривой забывания</p>
-          </div>
-
-          <div class="digits__table_cell">
-            <h2 class="digits__table_heading">1889 год</h2>
-            <p class="digits__table_text">Открытие условного рефлекса</p>
-          </div>
-      </section>
-
       <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h4 class="feynman__subtitle">Выучить и не забыть.</h4>
+        <a href="#" class="feynman__link">Подробнее →</a>
       </section>
 
       <section class="kaufman">
+        <h3 class="section-title">Принципы обучения</h3>
+        <h5 class="section-subtitle">от Джоша Коуфмана</h5>
+        <div class="table">
+          <div class="table_cell kaufman__cell_interval">
+            <h6 class="table_heading">1</h6>
+            <p class='table_text'>Выберете привлекательный объект.</p>
+          </div>
+          <div class="table_cell kaufman__cell_interval">
+            <h6 class="table_heading">2</h6>
+            <p class='table_text'>Сосредоточьтесь на каком-то одном навыке.</p>
+          </div>
+          <div class="table_cell kaufman__cell_interval">
+            <h6 class="table_heading">3</h6>
+            <p class='table_text'>Определите целевой уровень мастерства.</p>
+          </div>
+          <div class="table_cell kaufman__cell_interval">
+            <h6 class="table_heading">4</h6>
+            <p class='table_text'>Разбейте навык на элементы.</p>
+          </div>
+          <div class="table_cell kaufman__cell_interval">
+            <h6 class="table_heading">5</h6>
+            <p class='table_text'>Приготовьте всё необходимое для занятий.</p>
+          </div>
+          <div class="table_cell">
+            <h6 class="table_heading">6</h6>
+            <p class='table_text'>Устрените препятствия для занятий.</p>
+          </div>
+          <div class="table_cell">
+            <h6 class="table_heading">7</h6>
+            <p class='table_text'>Выделите специальное время для занятий.</p>
+          </div>
+          <div class="table_cell">
+            <h6 class="table_heading">8</h6>
+            <p class='table_text'>Создайте быстрые петли обратной связи.</p>
+          </div>
+          <div class="table_cell">
+            <h6 class="table_heading">9</h6>
+            <p class='table_text'>Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </div>
+          <div class="table_cell">
+            <h6 class="table_heading">10</h6>
+            <p class='table_text'>Уделяйте внимание количеству и скорости.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="footer">
-
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <img src="./images/logo_place_footer.svg" alt="Логотип" class="logo logo__place_footer">
+          <p class="footer__author">© 2021. Екатерина Аникеева</p>
+        </div>
+        <div class="footer__column_content_info">
+          <h6 class="footer__column-heading">О Практикуме</h6>
+          <div class="footer__column-links">
+            <a href="#" class="footer__column-link">Главная</a>
+            <a href="#" class="footer__column-link">Концепция</a>
+            <a href="#" class="footer__column-link">Наставники</a>
+          </div>>
+        </div>
+        <div class="footer__column_content_social">
+          <h6 class="footer__column-heading">Соцсети</h6>
+          <div class="footer__column-links">
+            <a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="log"
+                class="footer__social-icon"> Facebook</a>
+            <a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="log"
+                class="footer__social-icon"> ВКонтакте</a>
+            <a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="log"
+                class="footer__social-icon"> Instagram</a>
+          </div>>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
