--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <div class="page">
+
     <header class="header">
       <img src="./images/logo_place_header.svg" alt="Логотип" class="logo logo__place_header">
       <h1 class="header__title">Научиться учиться</h1>
@@ -19,9 +20,13 @@
       <img src="./images/header-image.png" alt="Мальчик с собакой" class="header__main-illustration header__image">
       <div class="header__square-pic"></div>
     </header>
+
     <main class="content">
+
       <section class="description">
+
         <div class="two_columns">
+
           <h3 class="two_columns_brief">Главные проблемы в обучении</h3>
 
           <div class="two_columns_main-text">
@@ -37,15 +42,17 @@
             <p class="two_columns_paragrath">Конкретные техники упражнения помогают изменить подход к обучению, сделать
               его эффективным и
               захватывающим. Эти техники применяются на примере обучения в Практикуме.</p>
-
           </div>
         </div>
       </section>
+
       <section class="digits">
+
         <h3 class="section-title">Цифры и факты</h3>
         <h5 class="section-subtitle">Про учебу и мозг</h5>
 
         <div class="table">
+
           <div class="table_cell">
             <h6 class="table_heading">86 миллиардов</h6>
             <p class='table_text'>Число нейронов в мозге человека</p>
@@ -93,74 +100,98 @@
       </section>
 
       <section class="feynman">
+
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <h4 class="feynman__subtitle">Выучить и не забыть.</h4>
+
         <a href="#" class="feynman__link">Подробнее →</a>
       </section>
 
       <section class="kaufman">
+
         <h3 class="section-title">Принципы обучения</h3>
         <h5 class="section-subtitle">от Джоша Коуфмана</h5>
+
         <div class="table">
-          <div class="table_cell kaufman__cell_interval">
+
+          <div class="table_cell">
             <h6 class="table_heading">1</h6>
             <p class='table_text'>Выберете привлекательный объект.</p>
           </div>
-          <div class="table_cell kaufman__cell_interval">
+
+          <div class="table_cell">
             <h6 class="table_heading">2</h6>
             <p class='table_text'>Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
-          <div class="table_cell kaufman__cell_interval">
+
+          <div class="table_cell">
             <h6 class="table_heading">3</h6>
             <p class='table_text'>Определите целевой уровень мастерства.</p>
           </div>
-          <div class="table_cell kaufman__cell_interval">
+
+          <div class="table_cell">
             <h6 class="table_heading">4</h6>
             <p class='table_text'>Разбейте навык на элементы.</p>
           </div>
-          <div class="table_cell kaufman__cell_interval">
+
+          <div class="table_cell">
             <h6 class="table_heading">5</h6>
             <p class='table_text'>Приготовьте всё необходимое для занятий.</p>
           </div>
+
           <div class="table_cell">
             <h6 class="table_heading">6</h6>
             <p class='table_text'>Устрените препятствия для занятий.</p>
           </div>
+
           <div class="table_cell">
             <h6 class="table_heading">7</h6>
             <p class='table_text'>Выделите специальное время для занятий.</p>
           </div>
+
           <div class="table_cell">
             <h6 class="table_heading">8</h6>
             <p class='table_text'>Создайте быстрые петли обратной связи.</p>
           </div>
+
           <div class="table_cell">
             <h6 class="table_heading">9</h6>
             <p class='table_text'>Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
+
           <div class="table_cell">
             <h6 class="table_heading">10</h6>
             <p class='table_text'>Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
       </section>
+
     </main>
+
     <footer class="footer">
+
       <div class="footer__columns">
+
         <div class="footer__column_content_copyright">
           <img src="./images/logo_place_footer.svg" alt="Логотип" class="logo logo__place_footer">
           <p class="footer__author">© 2021. Екатерина Аникеева</p>
         </div>
+
         <div class="footer__column_content_info">
+
           <h6 class="footer__column-heading">О Практикуме</h6>
+
           <div class="footer__column-links">
             <a href="#" class="footer__column-link">Главная</a>
             <a href="#" class="footer__column-link">Концепция</a>
             <a href="#" class="footer__column-link">Наставники</a>
           </div>>
         </div>
+
         <div class="footer__column_content_social">
+
           <h6 class="footer__column-heading">Соцсети</h6>
+
           <div class="footer__column-links">
             <a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="log"
                 class="footer__social-icon"> Facebook</a>
