--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <div class="page">
 
     <header class="header">
-      <img src="./images/logo_place_header.svg" alt="Логотип" class="logo logo__place_header">
+      <img src="./images/logo_place_header.svg" alt="Логотип" class="logo logo_place-header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в
         своей жизни? <a href="#" class="header__link">Узнать →</a></p>
-      <img src="./images/header-image.png" alt="Мальчик с собакой" class="header__main-illustration header__image">
+      <img src="./images/header-image.png" alt="Мальчик с собакой" class="header__main-illustration">
       <div class="header__square-pic"></div>
     </header>
 
@@ -25,76 +25,78 @@
 
       <section class="description">
 
-        <div class="two_columns">
+        <div class="two-columns">
 
-          <h3 class="two_columns_brief">Главные проблемы в обучении</h3>
+          <h2 class="two-columns_brief">Главные проблемы в обучении</h2>
 
-          <div class="two_columns_main-text">
-            <p class="two_columns_paragrath">Ни в школе, ни в институте нас не учат тому, как правильно изучать
+          <div class="two-columns_main-text">
+
+            <p class="two-columns_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
               материал. Мы готовимся к экзаменам и
               учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не
               дает нам реального знания. Зубрежка быстро выветривается т не приносит пользы.</p>
 
-            <p class="two_columns_paragrath"><span class="two-columns__span-accent">Вывод:
+            <p class="two-columns_paragraph"><span class="two-columns__span-accent">Вывод:
               </span>
               учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
 
-            <p class="two_columns_paragrath">Конкретные техники упражнения помогают изменить подход к обучению, сделать
+            <p class="two-columns_paragraph">Конкретные техники упражнения помогают изменить подход к обучению, сделать
               его эффективным и
               захватывающим. Эти техники применяются на примере обучения в Практикуме.</p>
+
           </div>
         </div>
       </section>
 
       <section class="digits">
 
-        <h3 class="section-title">Цифры и факты</h3>
-        <h5 class="section-subtitle">Про учебу и мозг</h5>
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учебу и мозг</p>
 
         <div class="table">
 
-          <div class="table_cell">
-            <h6 class="table_heading">86 миллиардов</h6>
-            <p class='table_text'>Число нейронов в мозге человека</p>
+          <div class="table__cell">
+            <p class="table__heading">86 миллиардов</p>
+            <p class="table__text">Число нейронов в мозге человека</p>
           </div>
 
-          <div class="table_cell">
-            <h6 class="table_heading">2.1 миллиарда</h6>
-            <p class="table_text">Число нуждающихся в повышении квалификации</p>
-            <p class="table_text">Всемирный Банк, 2017</p>
+          <div class="table__cell">
+            <p class="table__heading">2.1 миллиарда</p>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
 
-          <div class="table_cell">
-            <h6 class="table_heading">1000 терабайт</h6>
-            <p class="table_text">Объем памяти человека</p>
+          <div class="table__cell">
+            <p class="table__heading">1000 терабайт</p>
+            <p class="table__text">Объем памяти человека</p>
           </div>
 
-          <div class="table_cell">
-            <h6 class="table_heading">500 триллионов</h6>
-            <p class="table_text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          <div class="table__cell">
+            <p class="table__heading">500 триллионов</p>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
 
-          <div class="table_cell">
-            <h6 class="table_heading">420 миллионов</h6>
-            <p class="table_text">Число взрослых людей моложе 25 лет, не имеющих образования для
+          <div class="table__cell">
+            <p class="table__heading">420 миллионов</p>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для
               трудоустройства
             </p>
-            <p class="table_text">Всемирный Банк, 2017</p>
+            <p class="table__tex">Всемирный Банк, 2017</p>
           </div>
 
-          <div class="table_cell">
-            <h6 class="table_heading">17-20 лет</h6>
-            <p class="table_text">Пик обучаемости</p>
+          <div class="table__cell">
+            <p class="table__heading">17-20 лет</p>
+            <p class="table__text">Пик обучаемости</p>
           </div>
 
-          <div class="table_cell">
-            <h6 class="table_heading">1885 год</h6>
-            <p class="table_text">Открытие кривой забывания</p>
+          <div class="table__cell">
+            <p class="table__heading">1885 год</p>
+            <p class="table__text">Открытие кривой забывания</p>
           </div>
 
-          <div class="table_cell">
-            <h6 class="table_heading">1889 год</h6>
-            <p class="table_text">Открытие условного рефлекса</p>
+          <div class="table__cell">
+            <p class="table__heading">1889 год</p>
+            <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
@@ -102,67 +104,71 @@
       <section class="feynman">
 
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h4 class="feynman__subtitle">Выучить и не забыть.</h4>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
 
         <a href="#" class="feynman__link">Подробнее →</a>
       </section>
 
       <section class="kaufman">
 
-        <h3 class="section-title">Принципы обучения</h3>
-        <h5 class="section-subtitle">от Джоша Коуфмана</h5>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Коуфмана</p>
 
         <div class="table">
 
-          <div class="table_cell">
-            <h6 class="table_heading">1</h6>
-            <p class='table_text'>Выберете привлекательный объект.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <p class="table__heading table_theme_dark">1</p>
+            <p class="table__text table_theme_dark">Выберете привлекательный объект.</p>
           </div>
 
-          <div class="table_cell">
-            <h6 class="table_heading">2</h6>
-            <p class='table_text'>Сосредоточьтесь на каком-то одном навыке.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <p class="table__heading table_theme_dark">2</p>
+            <p class="table__text table_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
 
-          <div class="table_cell">
-            <h6 class="table_heading">3</h6>
-            <p class='table_text'>Определите целевой уровень мастерства.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <p class="table__heading table_theme_dark">3</p>
+            <p class="table__text table_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
 
-          <div class="table_cell">
-            <h6 class="table_heading">4</h6>
-            <p class='table_text'>Разбейте навык на элементы.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <p class="table__heading table_theme_dark">4</p>
+            <p class="table__text table_theme_dark">Разбейте навык на элементы.</p>
           </div>
 
-          <div class="table_cell">
-            <h6 class="table_heading">5</h6>
-            <p class='table_text'>Приготовьте всё необходимое для занятий.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <p class="table__heading table_theme_dark">5</p>
+            <p class="table__text table_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </div>
 
-          <div class="table_cell">
-            <h6 class="table_heading">6</h6>
-            <p class='table_text'>Устрените препятствия для занятий.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <p class="table__heading table_theme_dark">6</p>
+            <p class="table__text table_theme_dark">Устрените препятствия для занятий.</p>
           </div>
 
-          <div class="table_cell">
-            <h6 class="table_heading">7</h6>
-            <p class='table_text'>Выделите специальное время для занятий.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <p class="table__heading table_theme_dark">7</p>
+            <p class="table__text table_theme_dark">Выделите специальное время для занятий.</p>
           </div>
 
-          <div class="table_cell">
-            <h6 class="table_heading">8</h6>
-            <p class='table_text'>Создайте быстрые петли обратной связи.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <p class="table__heading table_theme_dark">8</p>
+            <p class="table__text table_theme_dark">Создайте быстрые петли обратной связи.</p>
           </div>
 
-          <div class="table_cell">
-            <h6 class="table_heading">9</h6>
-            <p class='table_text'>Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <p class="table__heading table_theme_dark">9</p>
+            <p class="table__text table_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
 
-          <div class="table_cell">
-            <h6 class="table_heading">10</h6>
-            <p class='table_text'>Уделяйте внимание количеству и скорости.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <p class="table__heading table_theme_dark">10</p>
+            <p class="table__text table_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
+        </div>
+
+        <div class="kaufman__triangle">
+
         </div>
       </section>
 
@@ -172,35 +178,35 @@
 
       <div class="footer__columns">
 
-        <div class="footer__column_content_copyright">
-          <img src="./images/logo_place_footer.svg" alt="Логотип" class="logo logo__place_footer">
+        <div class="footer__column footer__column_content_copyright">
+          <img src="./images/logo_place_footer.svg" alt="Логотип" class="logo logo_place-footer">
           <p class="footer__author">© 2021. Екатерина Аникеева</p>
         </div>
 
-        <div class="footer__column_content_info">
+        <nav class="footer__column footer__column_content_info">
 
-          <h6 class="footer__column-heading">О Практикуме</h6>
+          <h3 class="footer__column-heading">О Практикуме</h3>
 
           <div class="footer__column-links">
             <a href="#" class="footer__column-link">Главная</a>
             <a href="#" class="footer__column-link">Концепция</a>
             <a href="#" class="footer__column-link">Наставники</a>
           </div>>
-        </div>
+        </nav>>
 
-        <div class="footer__column_content_social">
+        <nav class="footer__column footer__column_content_social">
 
-          <h6 class="footer__column-heading">Соцсети</h6>
+          <h3 class="footer__column-heading">Соцсети</h3>
 
           <div class="footer__column-links">
-            <a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="log"
+            <a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Логотип"
                 class="footer__social-icon"> Facebook</a>
-            <a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="log"
+            <a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="Логотип"
                 class="footer__social-icon"> ВКонтакте</a>
-            <a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="log"
+            <a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Логотип"
                 class="footer__social-icon"> Instagram</a>
           </div>>
-        </div>
+        </nav>>
       </div>
     </footer>
   </div>
