--- a/index.html
+++ b/index.html
@@ -52,47 +52,47 @@
         <h2 class="section-title">Техники обучения</h2>
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
 
-        <div class="cards">
+        <ul class="cards">
 
-          <div class="cards__item">
-            <img src="./images_sprint-2/cards-attention.png" alt="Картинка: руки с листом" class="cards__image">
+          <li class="cards__item">
+            <img src="./images/cards-attention.png" alt="Картинка: руки с листом" class="cards__image">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">
-              Глубокие знания<br>возникают, если чередовать<br>
-              сфокусированное и<br>рассеянное мышление.</p>
-          </div>
+              Глубокие знания возникают, если чередовать
+              сфокусированное и рассеянное мышление.</p>
+          </li>
 
-          <div class="cards__item">
-            <img src="./images_sprint-2/cards-recall.png" alt="Картинка: задумчивый памятник" class="cards__image">
+          <li class="cards__item">
+            <img src="./images/cards-recall.png" alt="Картинка: задумчивый памятник" class="cards__image">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">
-              Вспоминайте изученное — <br>это позволит соединить<br>
-              разрозненные порции<br>памяти.</p>
-          </div>
+              Вспоминайте изученное — это позволит соединить
+              разрозненные порции памяти.</p>
+          </li>
 
-          <div class="cards__item">
-            <img src="./images_sprint-2/cards-interliving.png" alt="Картинка: Интерливинг" class="cards__image">
+          <li class="cards__item">
+            <img src="./images/cards-interliving.png" alt="Картинка: Интерливинг" class="cards__image">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">
-              Изучайте несколько<br>навыков одновременно,<br>
+              Изучайте несколько навыков одновременно,
               они обогащают друг друга.</p>
-          </div>
+          </li>
 
-          <div class="cards__item">
-            <img src="./images_sprint-2/cards-question.png" alt="Картинка: человек один в комнате" class="cards__image">
+          <li class="cards__item">
+            <img src="./images/cards-question.png" alt="Картинка: человек один в комнате" class="cards__image">
             <h3 class="cards__title">Вопросы</h3>
-            <p class="cards__description">Слушая преподавателя,<br>придумывайте хороший<br>вопрос, который
-              вас<br>действительно волнует.</p>
-          </div>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который
+              вас действительно волнует.</p>
+          </li>
 
-          <div class="cards__item">
-            <img src="./images_sprint-2/cards-competence.png" alt="Картинка: рука держит книги" class="cards__image">
+          <li class="cards__item">
+            <img src="./images/cards-competence.png" alt="Картинка: рука держит книги" class="cards__image">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">
-              Повторите про себя,<br>запишите, расскажите<br>
-              другу: вам только кажется,<br>что вы владеете новой<br>темой.</p>
-          </div>
-        </div>
+              Повторите про себя, запишите, расскажите
+              другу: вам только кажется, что вы владеете новой темой.</p>
+          </li>>
+        </ul>
 
       </section>
 
@@ -205,7 +205,7 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img src="./images_sprint-2/khan-book.jpg" alt="Изображение книги Салмана Хана" class="khan__pic">
+            <img src="./images/khan-book.jpg" alt="Изображение книги Салмана Хана" class="khan__pic">
             <a href="#" class="khan__buy-link">Купить книгу →</a>
           </div>
         </div>
@@ -280,12 +280,14 @@
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
 
         <div class="resources__logo-zone">
-          <img src="./images_sprint-2/logo/resources-arzamas.svg" alt="Логотип компании Arzamas"
-            class="resources__logo">
-          <img src="./images_sprint-2/logo/resources-n1.svg" alt="Логотип компании N+1" class="resources__logo">
-          <img src="./images_sprint-2/logo/resources-strelka.svg" alt="Логотип компании STRELKA"
-            class="resources__logo">
-          <img src="./images_sprint-2/logo/resources-polka.svg" alt="Логотип компании ПОЛКА" class="resources__logo">
+          <a href="#" class="resources__link"><img src="./images/logo/resources-arzamas.svg"
+              alt="Логотип компании Arzamas" class="resources__logo"></a>
+          <a href="#" class="resources__link"><img src="./images/logo/resources-n1.svg" alt="Логотип компании N+1"
+              class="resources__logo"></a>
+          <a href="#" class="resources__link"><img src="./images/logo/resources-strelka.svg"
+              alt="Логотип компании STRELKA" class="resources__logo"></a>
+          <a href="#" class="resources__link"><img src="./images/logo/resources-polka.svg"
+              alt="Логотип компании ПОЛКА" class="resources__logo"></a>
         </div>
       </section>
 
